feat: group selected documents by type in project creation
- Update `renderDocumentsSelection` to organize documents into categorized sections based on their `type` property rather than a flat list.
- Add visual headers for each group to improve list readability.
- Modify the document addition logic to correctly extract and store the `type` property in `customDocuments`.
- Change container display style to allow for full-width group headers.

--- a/creation-projet/index.html
+++ b/creation-projet/index.html
@@ -70,11 +70,22 @@
                         <h3>Ajouter des documents</h3>
                         <button type="button" id="close-docs-modal" class="modal-close">&times;</button>
                     </div>
+                    <datalist id="doc-type-options">
+                        <option value="ARMATURES">
+                        <option value="COFFRAGE">
+                        <option value="COUPES">
+                        <option value="DÉMOLITION">
+                        <option value="NDC">
+                    </datalist>
                     <div class="modal-tabs">
                         <button type="button" class="tab-btn active" data-tab="manual">Manuel</button>
                         <button type="button" class="tab-btn" data-tab="pattern">Avec motif</button>
                     </div>
                     <div class="tab-content" id="tab-manual">
+                        <div class="form-group">
+                            <label for="manual-doc-type">Type de document :</label>
+                            <input type="text" id="manual-doc-type" list="doc-type-options" placeholder="Sélectionner ou saisir un type" value="COFFRAGE">
+                        </div>
                         <div class="form-group">
                             <label for="manual-doc-name">Nom du document :</label>
                             <input type="text" id="manual-doc-name" placeholder="Ex: RDC, SS1, R+3...">
@@ -86,6 +97,10 @@
                         <button type="button" id="add-manual-doc-btn" class="primary-btn">Ajouter</button>
                     </div>
                     <div class="tab-content" id="tab-pattern" style="display: none;">
+                        <div class="form-group">
+                            <label for="pattern-doc-type">Type de document :</label>
+                            <input type="text" id="pattern-doc-type" list="doc-type-options" placeholder="Sélectionner ou saisir un type" value="COFFRAGE">
+                        </div>
                         <div class="form-group">
                             <label for="pattern-prefix">Préfixe :</label>
                             <input type="text" id="pattern-prefix" placeholder="Ex: R+, SS, Étage">
@@ -141,6 +156,7 @@
                                     <tr>
                                         <th>N°Document</th>
                                         <th>Nom Document</th>
+                                        <th>Type</th>
                                     </tr>
                                 </thead>
                                 <tbody id="pattern-preview-body">
