Ajout Journée d'école

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -67,6 +67,7 @@
             <option value="Gestion de service">Gestion de service</option>
             <option value="Congés/Maladie/RTT/Férié">Congés/Maladie/RTT/Férié</option>
             <option value="Formation/stages(reçues)">Formation/stages(reçues)</option>
+            <option value="Journée École">Journée École</option>
             <option value="01-Analyse Dossier-Organisation">01-Analyse Dossier-Organisation</option>
             <option value="02-Réunions-Visite sur chantier">02-Réunions-Visite sur chantier</option>
             <option value="03-Fond de plans">03-Fond de plans</option>
