--- a/Planning Projet/Index.html
+++ b/Planning Projet/Index.html
@@ -3,17 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sélection Projet</title>
+  <title>Planning Projet - Prototype</title>
 
-  <!-- Grist Plugin API -->
+  <!-- Grist -->
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 
-  <!-- CSS (anti-cache avec ?v=2) -->
-  <link rel="stylesheet" href="./assets/css/variables.css?v=2" />
-  <link rel="stylesheet" href="./assets/css/styles.css?v=2" />
+  <!-- Vis Timeline (même système que ton zip) -->
+  <script src="https://unpkg.com/vis-timeline/standalone/umd/vis-timeline-graph2d.min.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/vis-timeline/styles/vis-timeline-graph2d.min.css"
+  />
 
-  <!-- JS -->
-  <script type="module" src="./assets/js/main.js?v=2" defer></script>
+  <!-- Styles app -->
+  <link rel="stylesheet" href="./assets/css/variables.css?v=10" />
+  <link rel="stylesheet" href="./assets/css/styles.css?v=10" />
+
+  <!-- App -->
+  <script type="module" src="./assets/js/main.js?v=10" defer></script>
 </head>
 <body>
   <div class="sticky-container">
@@ -25,6 +32,23 @@
     </div>
   </div>
 
-  <div id="plans-output"></div>
+  <!-- Header "tableau" (4 colonnes + planning) -->
+  <div class="planning-header-row">
+    <div class="planning-header-left">
+      <div class="hcol c-id2">ID2</div>
+      <div class="hcol c-task">Tâches</div>
+      <div class="hcol c-type">Type_doc</div>
+      <div class="hcol c-line">Ligne_planning</div>
+    </div>
+    <div class="planning-header-right">Planning</div>
+  </div>
+
+  <!-- Timeline -->
+  <div id="timelineWrapper">
+    <div id="planningTimeline"></div>
+  </div>
+
+  <!-- Message si besoin -->
+  <div id="planningStatus" class="planning-status"></div>
 </body>
 </html>
