--- a/Planning Projet/Index.html
+++ b/Planning Projet/Index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planning Projet - Prototype</title>
+  <title>Planning Projet</title>
 
   <!-- Grist -->
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 
-  <!-- Vis Timeline (même système que ton zip) -->
+  <!-- vis-timeline (même système que timeline-calendar.zip) -->
   <script src="https://unpkg.com/vis-timeline/standalone/umd/vis-timeline-graph2d.min.js"></script>
   <link
     rel="stylesheet"
@@ -16,23 +16,39 @@
   />
 
   <!-- Styles app -->
-  <link rel="stylesheet" href="./assets/css/variables.css?v=10" />
-  <link rel="stylesheet" href="./assets/css/styles.css?v=11" />
+  <link rel="stylesheet" href="./assets/css/variables.css?v=20" />
+  <link rel="stylesheet" href="./assets/css/styles.css?v=20" />
 
   <!-- App -->
-  <script type="module" src="./assets/js/main.js?v=11" defer></script>
+  <script type="module" src="./assets/js/main.js?v=20" defer></script>
 </head>
 <body>
-  <div class="sticky-container">
-    <div class="dropdown-container">
-      <label for="projectDropdown">Projet :</label>
+  <!-- Toolbar style timeline-calendar -->
+  <div id="toolbar">
+    <div class="nav-buttons">
+      <button id="btn-prev" type="button" title="Période précédente">&lt;</button>
+      <button id="btn-today" type="button">Aujourd'hui</button>
+      <button id="btn-next" type="button" title="Période suivante">&gt;</button>
+    </div>
+
+    <div class="filters">
+      <label for="projectDropdown" class="toolbar-label">Projet :</label>
       <select id="projectDropdown" disabled>
         <option value="">Choisir un projet</option>
       </select>
     </div>
+
+    <!-- Zoom : uniquement semaine / mois / année -->
+    <div class="zoom-buttons" aria-label="Niveau de zoom">
+      <button type="button" data-zoom="week" class="active">Semaine</button>
+      <button type="button" data-zoom="month">Mois</button>
+      <button type="button" data-zoom="year">Année</button>
+    </div>
+
+    <div id="current-date-range" aria-live="polite"></div>
   </div>
 
-  <!-- Header "tableau" (4 colonnes + planning) -->
+  <!-- Header tableau (4 colonnes à gauche + planning à droite) -->
   <div class="planning-header-row">
     <div class="planning-header-left">
       <div class="hcol c-id2">ID2</div>
@@ -48,7 +64,7 @@
     <div id="planningTimeline"></div>
   </div>
 
-  <!-- Message si besoin -->
+  <!-- Statut / messages -->
   <div id="planningStatus" class="planning-status"></div>
 </body>
 </html>
