--- a/Planning Projet/Index.html
+++ b/Planning Projet/Index.html
@@ -16,11 +16,11 @@
   />
 
   <!-- Styles app -->
-  <link rel="stylesheet" href="./assets/css/variables.css?v=20" />
-  <link rel="stylesheet" href="./assets/css/styles.css?v=20" />
+  <link rel="stylesheet" href="./assets/css/variables.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 
   <!-- App -->
-  <script type="module" src="./assets/js/main.js?v=20" defer></script>
+  <script type="module" src="./assets/js/main.js" defer></script>
 </head>
 <body>
   <!-- Toolbar style timeline-calendar -->
