--- a/Planning Projet/Index.html
+++ b/Planning Projet/Index.html
@@ -51,10 +51,11 @@
   <!-- Header tableau (4 colonnes à gauche + planning à droite) -->
   <div class="planning-header-row">
     <div class="planning-header-left">
-      <div class="hcol c-id2">ID2</div>
+      <div class="hcol c-id2">Id</div>
       <div class="hcol c-task">Tâches</div>
-      <div class="hcol c-type">Type_doc</div>
-      <div class="hcol c-line">Ligne_planning</div>
+      <div class="hcol c-type">Type de doc</div>
+      <div class="hcol c-line">Ligne planning</div>
+      <div class="hcol c-indice">Indice</div>
     </div>
     <div class="planning-header-right">Planning</div>
   </div>
