--- a/Planning Projet/Index.html
+++ b/Planning Projet/Index.html
@@ -56,6 +56,7 @@
       <div class="hcol c-type">Type de doc</div>
       <div class="hcol c-line">Ligne planning</div>
       <div class="hcol c-indice">Indice</div>
+      <div class="hcol c-retards">Retard (j)</div>
     </div>
     <div class="planning-header-right">Planning</div>
   </div>
